--- a/flutter_app_2/pubspec.yaml
+++ b/flutter_app_2/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   video_player: ^2.9.2
+  provider: ^6.0.2  # 第三方库
 
 dev_dependencies:
   flutter_test:
