获取网络数据

--- a/flutter_study/pubspec.yaml
+++ b/flutter_study/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   video_player: ^2.9.2
   provider: ^6.0.2  # 第三方库
+  http: ^1.2.2
   
 
 dev_dependencies:
