--- a/flutter_study/pubspec.yaml
+++ b/flutter_study/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   video_player: ^2.9.2
   provider: ^6.0.2  # 第三方库
   http: ^1.2.2
+  web_socket_channel: ^3.0.1
   
 
 dev_dependencies:
