--- a/flutter_study/pubspec.yaml
+++ b/flutter_study/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.0.2  # 第三方库
   http: ^1.2.2
   web_socket_channel: ^3.0.1
+  json_annotation: ^4.9.0
   
 
 dev_dependencies:
@@ -51,6 +52,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.13
+  json_serializable: ^6.9.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
