--- a/flutter_study/pubspec.yaml
+++ b/flutter_study/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.2.2
   web_socket_channel: ^3.0.1
   json_annotation: ^4.9.0
+  shared_preferences: ^2.3.3
   
 
 dev_dependencies:
