--- a/flutter_study/pubspec.yaml
+++ b/flutter_study/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   web_socket_channel: ^3.0.1
   json_annotation: ^4.9.0
   shared_preferences: ^2.3.3
+  path_provider: ^2.0.8
   
 
 dev_dependencies:
