--- a/flutter_study/pubspec.yaml
+++ b/flutter_study/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   json_annotation: ^4.9.0
   shared_preferences: ^2.3.3
   path_provider: ^2.0.8
+  sqflite: ^2.4.1
+  path: ^1.9.0
   
 
 dev_dependencies:
